CaseStudyV2/force-app/main/default/objects/Job__c/fields/JobCompany__c.field-meta.xml
<CustomField>
    <fullName>JobCompany__c</fullName>
    <label>Job Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>