CaseStudyV2/force-app/main/default/objects/Job__c/fields/JobSummary__c.field-meta.xml
<CustomField>
    <fullName>JobSummary__c</fullName>
    <description>Summary of the job</description>
    <inlineHelpText>Brief summary of the job</inlineHelpText>
    <label>Job Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>