CaseStudyV2/force-app/main/default/objects/Job__c/fields/JobUrlLong__c.field-meta.xml
<CustomField>
    <fullName>JobUrlLong__c</fullName>
    <description>Job url but as a text field because the url field only allows a max of 255 characters.</description>
    <inlineHelpText>Url of the job posting.</inlineHelpText>
    <label>Job Url</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>